crates/surge-core/tests/snapshots/profile_registry_proptest__merged_three_step_with_dedup.snap
---
source: crates/surge-core/tests/profile_registry_proptest.rs
expression: toml
---
schema_version = 1

[role]
id = "child"
version = "1.0.0"
display_name = "child"
category = "agents"
description = "desc child"
when_to_use = "when child"
extends = "parent"

[runtime]
recommended_model = "claude-opus-4-7"
default_temperature = 0.20000000298023224
default_max_tokens = 200000
agent_id = "claude-code"

[sandbox]
mode = "workspace-write"
writable_roots = []
network_allowlist = []
shell_allowlist = []
protected_paths = []

[tools]
default_mcp = []
default_skills = []
default_shell_allowlist = []

[approvals]
policy = "on-request"
sandbox_approval = false
mcp_elicitations = false
request_permissions = false
skill_approval = true
elevation = true
elevation_channels = []

[[outcomes]]
id = "done"
description = "Success"
edge_kind_hint = "forward"
required_artifacts = []
produced_artifacts = []

[bindings]
expected = []

[[hooks.entries]]
id = "a"
trigger = "pre_tool_use"
command = "parent overrode a"
on_failure = "warn"
inherit = "extend"

[hooks.entries.matcher]

[[hooks.entries]]
id = "b"
trigger = "pre_tool_use"
command = "cmd b"
on_failure = "warn"
inherit = "extend"

[hooks.entries.matcher]

[[hooks.entries]]
id = "c"
trigger = "pre_tool_use"
command = "cmd c"
on_failure = "warn"
inherit = "extend"

[hooks.entries.matcher]

[[hooks.entries]]
id = "d"
trigger = "pre_tool_use"
command = "cmd d"
on_failure = "warn"
inherit = "extend"

[hooks.entries.matcher]

[prompt]
system = "system child"

[inspector_ui]
fields = []
